--- a/src/pages/ja/about.astro
+++ b/src/pages/ja/about.astro
@@ -31,7 +31,7 @@ import Footer from '../../components/Footer.astro';
           </div>
           <div>
             <span class="font-medium">メール：</span>
-            <a href="mailto:katsuyokobe@gmail.com" class="text-blue-600 hover:underline">katsuyokobe@gmail.com</a>
+            <a href="mailto:oukawk@yahoo.co.jp" class="text-blue-600 hover:underline">oukawk@yahoo.co.jp</a>
           </div>
         </div>
       </div>
