--- a/src/pages/submit.astro
+++ b/src/pages/submit.astro
@@ -13,9 +13,9 @@ import Footer from '../components/Footer.astro';
       <p class="text-gray-700 mb-3">
         請將您的投稿材料發送至我們的郵箱：
       </p>
-      <a href="mailto:katsuyokobe@gmail.com" class="inline-flex items-center text-blue-600 hover:text-blue-800 font-medium text-lg">
+      <a href="mailto:oukawk@yahoo.co.jp" class="inline-flex items-center text-blue-600 hover:text-blue-800 font-medium text-lg">
         <span class="mr-2">📧</span>
-        katsuyokobe@gmail.com
+        oukawk@yahoo.co.jp
       </a>
     </div>
 
@@ -79,7 +79,7 @@ import Footer from '../components/Footer.astro';
           <p>如有任何疑問，歡迎通過以下方式聯繫我們：</p>
           <div class="flex items-center">
             <span class="font-medium mr-2">郵箱：</span>
-            <a href="mailto:katsuyokobe@gmail.com" class="text-blue-600 hover:underline">katsuyokobe@gmail.com</a>
+            <a href="mailto:oukawk@yahoo.co.jp" class="text-blue-600 hover:underline">oukawk@yahoo.co.jp</a>
           </div>
           <div class="flex items-center">
             <span class="font-medium mr-2">傳真：</span>
