--- a/src/pages/zh-cn/submit.astro
+++ b/src/pages/zh-cn/submit.astro
@@ -13,9 +13,9 @@ import Footer from '../../components/Footer.astro';
       <p class="text-gray-700 mb-3">
         请将您的投稿材料发送至我们的邮箱：
       </p>
-      <a href="mailto:katsuyokobe@gmail.com" class="inline-flex items-center text-blue-600 hover:text-blue-800 font-medium text-lg">
+      <a href="mailto:oukawk@yahoo.co.jp" class="inline-flex items-center text-blue-600 hover:text-blue-800 font-medium text-lg">
         <span class="mr-2">📧</span>
-        katsuyokobe@gmail.com
+        oukawk@yahoo.co.jp
       </a>
     </div>
 
@@ -79,7 +79,7 @@ import Footer from '../../components/Footer.astro';
           <p>如有任何疑问，欢迎通过以下方式联系我们：</p>
           <div class="flex items-center">
             <span class="font-medium mr-2">邮箱：</span>
-            <a href="mailto:katsuyokobe@gmail.com" class="text-blue-600 hover:underline">katsuyokobe@gmail.com</a>
+            <a href="mailto:oukawk@yahoo.co.jp" class="text-blue-600 hover:underline">oukawk@yahoo.co.jp</a>
           </div>
           <div class="flex items-center">
             <span class="font-medium mr-2">传真：</span>
