--- a/src/pages/en/submit.astro
+++ b/src/pages/en/submit.astro
@@ -13,9 +13,9 @@ import Footer from '../../components/Footer.astro';
       <p class="text-gray-700 mb-3">
         Please send your manuscript materials to our email:
       </p>
-      <a href="mailto:katsuyokobe@gmail.com" class="inline-flex items-center text-blue-600 hover:text-blue-800 font-medium text-lg">
+      <a href="mailto:oukawk@yahoo.co.jp" class="inline-flex items-center text-blue-600 hover:text-blue-800 font-medium text-lg">
         <span class="mr-2">📧</span>
-        katsuyokobe@gmail.com
+        oukawk@yahoo.co.jp
       </a>
     </div>
 
@@ -79,7 +79,7 @@ import Footer from '../../components/Footer.astro';
           <p>If you have any questions, please feel free to contact us:</p>
           <div class="flex items-center">
             <span class="font-medium mr-2">Email:</span>
-            <a href="mailto:katsuyokobe@gmail.com" class="text-blue-600 hover:underline">katsuyokobe@gmail.com</a>
+            <a href="mailto:oukawk@yahoo.co.jp" class="text-blue-600 hover:underline">oukawk@yahoo.co.jp</a>
           </div>
           <div class="flex items-center">
             <span class="font-medium mr-2">FAX:</span>
